[gd_scene load_steps=4 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://NodeHTTPCustom.tscn" type="PackedScene" id=2]
[ext_resource path="res://NodeHTTPOfficial.gd" type="Script" id=3]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.168457
margin_right = 0.168457
margin_bottom = 30.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -546.0
margin_top = -390.0
margin_right = 555.0
margin_bottom = 377.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PathContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1101.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
custom_constants/separation = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Path" type="Label" parent="VBoxContainer/PathContainer"]
margin_top = 8.0
margin_right = 600.0
margin_bottom = 22.0
rect_min_size = Vector2( 600, 0 )
text = "C:\\Downloads\\Videos"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContainerPathInteract" type="HBoxContainer" parent="VBoxContainer/PathContainer"]
margin_left = 700.0
margin_right = 942.0
margin_bottom = 30.0
custom_constants/separation = 50

[node name="ChangePath" type="Button" parent="VBoxContainer/PathContainer/ContainerPathInteract"]
margin_right = 102.0
margin_bottom = 30.0
text = "Change Folder"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBoxRecursive" type="CheckBox" parent="VBoxContainer/PathContainer/ContainerPathInteract"]
margin_left = 152.0
margin_right = 242.0
margin_bottom = 30.0
text = "Recursive"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 34.0
margin_right = 1101.0
margin_bottom = 38.0

[node name="EntriesHeader" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 42.0
margin_right = 1101.0
margin_bottom = 56.0

[node name="Spacer" type="Label" parent="VBoxContainer/EntriesHeader"]
margin_right = 110.0
margin_bottom = 14.0
rect_min_size = Vector2( 110, 0 )

[node name="LabelTimeRemaining" type="LinkButton" parent="VBoxContainer/EntriesHeader"]
margin_left = 114.0
margin_right = 224.0
margin_bottom = 14.0
rect_min_size = Vector2( 110, 0 )
text = "Next Ep"

[node name="LabelTitle" type="LinkButton" parent="VBoxContainer/EntriesHeader"]
margin_left = 228.0
margin_right = 498.0
margin_bottom = 14.0
rect_min_size = Vector2( 270, 0 )
text = "Title"

[node name="LabelProgress" type="LinkButton" parent="VBoxContainer/EntriesHeader"]
margin_left = 502.0
margin_right = 902.0
margin_bottom = 14.0
rect_min_size = Vector2( 400, 0 )
text = "Progress"

[node name="Label" type="Label" parent="VBoxContainer/EntriesHeader"]
margin_left = 906.0
margin_right = 1101.0
margin_bottom = 14.0
rect_min_size = Vector2( 195, 0 )

[node name="HSeparator4" type="HSeparator" parent="VBoxContainer"]
margin_top = 60.0
margin_right = 1101.0
margin_bottom = 64.0

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_top = 68.0
margin_right = 1101.0
margin_bottom = 568.0
rect_min_size = Vector2( 100, 500 )

[node name="ContainerEntryList" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]

[node name="HBoxContainerFilter" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 572.0
margin_right = 1101.0
margin_bottom = 596.0
alignment = 1

[node name="LabelFilter" type="Label" parent="VBoxContainer/HBoxContainerFilter"]
margin_left = 406.0
margin_top = 5.0
margin_right = 491.0
margin_bottom = 19.0
text = "Filter Entries:"

[node name="LineEditFilter" type="LineEdit" parent="VBoxContainer/HBoxContainerFilter"]
margin_left = 495.0
margin_right = 695.0
margin_bottom = 24.0
rect_min_size = Vector2( 200, 0 )

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
margin_top = 600.0
margin_right = 1101.0
margin_bottom = 604.0

[node name="ContainerActionButtons" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 608.0
margin_right = 1101.0
margin_bottom = 632.0
custom_constants/separation = 30
alignment = 1

[node name="ContainerTitleEdit" type="HBoxContainer" parent="VBoxContainer/ContainerActionButtons"]
margin_left = 132.0
margin_right = 468.0
margin_bottom = 24.0

[node name="LabelTitle" type="Label" parent="VBoxContainer/ContainerActionButtons/ContainerTitleEdit"]
margin_top = 5.0
margin_right = 32.0
margin_bottom = 19.0
text = "Title:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEditTitle" type="LineEdit" parent="VBoxContainer/ContainerActionButtons/ContainerTitleEdit"]
margin_left = 36.0
margin_right = 336.0
margin_bottom = 24.0
rect_min_size = Vector2( 300, 0 )

[node name="ContainerDateEdit" type="HBoxContainer" parent="VBoxContainer/ContainerActionButtons"]
margin_left = 498.0
margin_right = 686.0
margin_bottom = 24.0

[node name="LabelDate" type="Label" parent="VBoxContainer/ContainerActionButtons/ContainerDateEdit"]
margin_top = 5.0
margin_right = 34.0
margin_bottom = 19.0
text = "Date:"

[node name="TextEditDate" type="LineEdit" parent="VBoxContainer/ContainerActionButtons/ContainerDateEdit"]
margin_left = 38.0
margin_right = 188.0
margin_bottom = 24.0
rect_min_size = Vector2( 150, 0 )

[node name="ContainerEpcount" type="HBoxContainer" parent="VBoxContainer/ContainerActionButtons"]
margin_left = 716.0
margin_right = 869.0
margin_bottom = 24.0

[node name="LabelEpcount" type="Label" parent="VBoxContainer/ContainerActionButtons/ContainerEpcount"]
margin_top = 5.0
margin_right = 91.0
margin_bottom = 19.0
text = "Episode Count"

[node name="TextEditEpcount" type="LineEdit" parent="VBoxContainer/ContainerActionButtons/ContainerEpcount"]
margin_left = 95.0
margin_right = 153.0
margin_bottom = 24.0
rect_min_size = Vector2( 30, 0 )

[node name="ButtonAddEntry" type="Button" parent="VBoxContainer/ContainerActionButtons"]
margin_left = 899.0
margin_right = 968.0
margin_bottom = 24.0
disabled = true
text = "Add Title"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContainerRSS" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 636.0
margin_right = 1101.0
margin_bottom = 660.0
custom_constants/separation = 10
alignment = 1

[node name="LabelRSS" type="Label" parent="VBoxContainer/ContainerRSS"]
visible = false
margin_left = 117.0
margin_top = 5.0
margin_right = 219.0
margin_bottom = 19.0
text = "Request Header"

[node name="LineEditRSS" type="LineEdit" parent="VBoxContainer/ContainerRSS"]
visible = false
margin_left = 173.0
margin_right = 473.0
margin_bottom = 24.0
rect_min_size = Vector2( 300, 0 )

[node name="LabelQuality" type="Label" parent="VBoxContainer/ContainerRSS"]
margin_left = 386.0
margin_top = 5.0
margin_right = 432.0
margin_bottom = 19.0
text = "Quality"

[node name="LineEditQuality" type="LineEdit" parent="VBoxContainer/ContainerRSS"]
margin_left = 442.0
margin_right = 500.0
margin_bottom = 24.0
rect_min_size = Vector2( 50, 0 )
text = "1080p"

[node name="LabelSubber" type="Label" parent="VBoxContainer/ContainerRSS"]
margin_left = 510.0
margin_top = 5.0
margin_right = 554.0
margin_bottom = 19.0
text = "Subber"

[node name="LineEditSubber" type="LineEdit" parent="VBoxContainer/ContainerRSS"]
margin_left = 564.0
margin_right = 714.0
margin_bottom = 24.0
rect_min_size = Vector2( 150, 0 )
text = "SubsPlease"

[node name="ButtonUpdateRSS" type="Button" parent="VBoxContainer/ContainerRSS"]
visible = false
margin_left = 830.0
margin_right = 915.0
margin_bottom = 24.0
text = "Update File"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
margin_top = 664.0
margin_right = 1101.0
margin_bottom = 668.0

[node name="ContainerWatchScript" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 672.0
margin_right = 1101.0
margin_bottom = 696.0
alignment = 1

[node name="LabelWatchScript" type="Label" parent="VBoxContainer/ContainerWatchScript"]
margin_left = 98.0
margin_top = 5.0
margin_right = 178.0
margin_bottom = 19.0
text = "Watch Script"

[node name="LineEditWatchScript" type="LineEdit" parent="VBoxContainer/ContainerWatchScript"]
margin_left = 182.0
margin_right = 1002.0
margin_bottom = 24.0
rect_min_size = Vector2( 820, 0 )

[node name="ContainerDownloadScript" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 700.0
margin_right = 1101.0
margin_bottom = 724.0
alignment = 1

[node name="LabelDownloadScript" type="Label" parent="VBoxContainer/ContainerDownloadScript"]
margin_left = 97.0
margin_top = 5.0
margin_right = 200.0
margin_bottom = 19.0
text = "Download Script"

[node name="LineEditDownloadScript" type="LineEdit" parent="VBoxContainer/ContainerDownloadScript"]
margin_left = 204.0
margin_right = 1004.0
margin_bottom = 24.0
rect_min_size = Vector2( 800, 0 )

[node name="LabelMessage" type="Label" parent="VBoxContainer"]
margin_top = 728.0
margin_right = 1101.0
margin_bottom = 768.0
rect_min_size = Vector2( 0, 40 )
mouse_filter = 1
text = "Greetings!"
align = 1
valign = 1

[node name="Background" type="Sprite" parent="."]

[node name="NodeHTTPCustom" parent="." instance=ExtResource( 2 )]

[node name="NodeHTTPOfficial" type="Node" parent="."]
script = ExtResource( 3 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]
[connection signal="pressed" from="VBoxContainer/PathContainer/ContainerPathInteract/ChangePath" to="." method="_on_ChangePath_pressed"]
[connection signal="toggled" from="VBoxContainer/PathContainer/ContainerPathInteract/CheckBoxRecursive" to="." method="_on_CheckBox_toggled"]
[connection signal="pressed" from="VBoxContainer/EntriesHeader/LabelTimeRemaining" to="." method="_on_LabelTimeRemaining_pressed"]
[connection signal="pressed" from="VBoxContainer/EntriesHeader/LabelTitle" to="." method="_on_LabelTitle_pressed"]
[connection signal="pressed" from="VBoxContainer/EntriesHeader/LabelProgress" to="." method="_on_LabelProgress_pressed"]
[connection signal="text_changed" from="VBoxContainer/HBoxContainerFilter/LineEditFilter" to="." method="_on_LineEdit_text_changed"]
[connection signal="text_changed" from="VBoxContainer/ContainerActionButtons/ContainerTitleEdit/TextEditTitle" to="." method="_on_TextEditTitle_text_changed"]
[connection signal="text_changed" from="VBoxContainer/ContainerActionButtons/ContainerDateEdit/TextEditDate" to="." method="_on_TextEditDate_text_changed"]
[connection signal="text_changed" from="VBoxContainer/ContainerActionButtons/ContainerEpcount/TextEditEpcount" to="." method="_on_TextEditEpcount_text_changed"]
[connection signal="pressed" from="VBoxContainer/ContainerActionButtons/ButtonAddEntry" to="." method="_on_ButtonAddEntry_pressed"]
[connection signal="focus_exited" from="VBoxContainer/ContainerWatchScript/LineEditWatchScript" to="." method="_on_LineEditWatchScript_focus_exited"]
[connection signal="focus_exited" from="VBoxContainer/ContainerDownloadScript/LineEditDownloadScript" to="." method="_on_LineEditDownloadScript_focus_exited"]
[connection signal="mouse_entered" from="VBoxContainer/LabelMessage" to="." method="_on_LabelMessage_mouse_entered"]
